<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">Clock</string>
    <string name="alarm_list_title">Alarms</string>
    <string name="add_alarm">Add alarm</string>
    <string name="menu_desk_clock">Desk clock</string>
    <string name="menu_edit_alarm">Edit alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="enable_alarm">Turn alarm on</string>
    <string name="disable_alarm">Turn alarm off</string>
    <string name="delete_alarm_confirm">Delete this alarm?</string>
    <string name="show_clock">Show clock</string>
    <string name="hide_clock">Hide clock</string>
    <string name="label">Label</string>
    <string name="default_label">Alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="alert">Alarm Ringtone</string>
    <string name="custom_ringtone">Custom Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="time">Time</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_alert_wake_up">Wake up\u0021</string>
    <string name="alarm_alert_off_action_text">Off</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_now_text">Dismiss Now</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%s</xliff:g> - <xliff:g id="alarm_label">%s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <plurals name="alarm_alert_snooze_duration">
        
        <item quantity="one">1 min</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%d</xliff:g> min</item>
    </plurals>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for 1 minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string-array name="timer_notifications">
        <item>Less than a minute remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> remaining</item>
        <item><xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
        <item><xliff:g id="HOURS" example="2 hours">%1$s</xliff:g> <xliff:g id="MINUTES" example="2 minutes">%2$s</xliff:g> remaining</item>
    </string-array>
    <string-array name="alarm_set">
        <item>Alarm set for less than 1 minute from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
        <item>Alarm set for <xliff:g id="DAYS" example="2 days">%1$s</xliff:g>, <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g>, and <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> from now.</item>
    </string-array>
    <plurals name="days">
        
        <item quantity="one">1 day</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> days</item>
    </plurals>
    <plurals name="hours">
        
        <item quantity="one">1 hour</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> hours</item>
    </plurals>
    <plurals name="minutes">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">Choose a clock</string>
    <string name="analog_gadget">Analog clock</string>
    <string name="help">help</string>
    <string name="settings">Settings</string>
    <string name="snooze_duration_title">Snooze length</string>
    <plurals name="snooze_duration">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <plurals name="snooze_picker_label">
        
        <item quantity="one">minute</item>
        
        <item quantity="other">minutes</item>
    </plurals>
    <string name="crescendo_duration_title">Gradually increase volume</string>
    <string name="no_crescendo_duration">Off</string>
    <string name="crescendo_duration"><xliff:g id="number" example="7">%s</xliff:g> seconds</string>
    <string name="crescendo_picker_label">seconds</string>
    <string name="auto_silence_title">Silence after</string>
    <plurals name="auto_silence_summary">
        
        <item quantity="one">1 minute</item>
        
        <item quantity="other"><xliff:g id="formatted_number" example="7">%s</xliff:g> minutes</item>
    </plurals>
    <string name="auto_silence_never">Never</string>
    <string-array name="auto_silence_entries">
      <item>1 minute</item>
      <item>5 minutes</item>
      <item>10 minutes</item>
      <item>15 minutes</item>
      <item>20 minutes</item>
      <item>25 minutes</item>
      <item>Never</item>
      </string-array>
    <string-array name="auto_silence_values" translatable="false">
      <item>1</item>
      <item>5</item>
      <item>10</item>
      <item>15</item>
      <item>20</item>
      <item>25</item>
      <item>-1</item> 
      </string-array>
    <string name="week_start_title">Start week on</string>
    <string-array name="week_start_entries">
        <item>Saturday</item>
        <item>Sunday</item>
        <item>Monday</item>
    </string-array>
    <string-array name="week_start_values" translatable="false">
        <item>7</item> 
        <item>1</item> 
        <item>2</item> 
    </string-array>
    <string name="done">Done</string>
    <string name="revert">Revert</string>
    <string name="delete">Delete</string>
    <string name="alarm_volume_title">Alarm volume</string>
    <string name="silent_alarm_summary">Silent</string>
    <string name="alarm_notify_text">Snooze or dismiss alarm.</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g> (snoozed)</string>
    <string name="alarm_notify_snooze_text">Alarm set for <xliff:g id="time">%s</xliff:g>. Touch to cancel.</string>
    <string name="volume_button_setting_title">Volume buttons</string>
    <string name="volume_button_dialog_title">Button effect</string>
    <string-array name="volume_button_setting_entries">
      <item>Snooze</item>
      <item>Dismiss</item>
      <item>Do nothing</item>
      </string-array>
    <string-array name="volume_button_setting_values" translatable="false">
      <item>1</item>
      <item>2</item>
      <item>0</item>
    </string-array>
    <string name="default_ringtone_setting_title">Set default ringtone</string>
    <string name="alarm_button_description">Alarms</string>
    <string name="gallery_button_description">Gallery</string>
    <string name="music_button_description">Music</string>
    <string name="nightmode_button_description">Dim</string>
    <string name="home_button_description">Launcher</string>
    <string name="desk_clock_button_description">Clock display</string>
    <string name="label_description">Label</string>
    <string name="ringtone_description">Ringtone</string>
    <string name="weather_fetch_failure">Weather information isn\'t available right now.</string>
    <string name="alarm_klaxon_service_desc">Sound playback service for alarms set in Clock.</string>
    <string name="loading_ringtone">Loading ringtone\u2026</string>
    <string name="timer_ring_service_desc">Sound playback service for timers set in Clock.</string>
    <string name="control_set_alarm">Set alarm</string>
    <string name="control_set_alarm_with_existing"><xliff:g id="time">%s</xliff:g></string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="button_alarms">Add alarm</string>
    <string name="button_cities">Cities</string>
    <string name="button_menu">More options</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_night_mode">Night mode</string>
    <string name="menu_item_sort_by_gmt_offset">Sort by time</string>
    <string name="menu_item_sort_by_name">Sort by name</string>
    <string name="selected_cities_label">Selected Cities</string>
    <string name="sw_resume_button">Resume</string>
    <string name="sw_reset_button">Reset</string>
    <string name="sw_start_button">Start</string>
    <string name="sw_stop_button">Stop</string>
    <string name="sw_lap_button">Lap</string>
    <string name="sw_share_button">Share</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="zero">0</string>
    <string name="sw_share_main">My time is <xliff:g id="time">%s</xliff:g></string>
    <string name="sw_share_laps">Lap times:</string>
    <string name="sw_notification_lap_number">Lap <xliff:g id="number">%d</xliff:g></string>
    <string name="timer_delete">Delete</string>
    <string name="timer_plus_one">Add 1 Minute</string>
    <string name="timer_stop">Stop</string>
    <string name="clock_settings">Clock</string>
    <string name="clock_style">Style</string>
    <string name="open_date_settings">Change Date \u0026 time</string>
    <string name="automatic_home_clock">Automatic home clock</string>
    <string name="automatic_home_clock_summary">While traveling in an area where the time is different, add a clock for home</string>
    <string name="home_time_zone">Home time zone</string>
    <string name="home_time_zone_title">Home time zone</string>
    <string name="time_picker_cancel">Cancel</string>
    <string name="time_picker_set">OK</string>
     <string name="alarm_settings">Alarms</string>
    <string name="timer_settings">Timers</string>
</resources>