<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2012 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<TextView
        android:id="@+id/title"
        style="?android:attr/windowTitleStyle"
        android:layout_marginTop="24dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dip"
        android:text="@string/label" />

    <EditText
        android:id="@+id/labelBox"
        style="@style/labelEditTextStyle"
        android:layout_marginTop="16dip"
        android:layout_marginBottom="24dip"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/title" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginBottom="16dip"
        android:layout_below="@id/labelBox">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/clock_white"
            android:text="@string/time_picker_cancel" />

        <Button
            android:id="@+id/setButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:textSize="@dimen/dialog_button_font_size"
            android:textColor="@color/hot_pink"
            android:text="@string/time_picker_set" />

    </LinearLayout>
</RelativeLayout>
