<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- timer item in the list of active timers -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/timer_circle_diameter"
        android:layout_marginLeft="@dimen/circle_margin"
        android:layout_marginRight="@dimen/circle_margin">

        <com.android.deskclock.CircleTimerView
            android:id="@+id/timer_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <com.android.deskclock.timer.CountingTimerView
            android:id="@+id/timer_time_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" >
        <Button
            android:id="@+id/timer_delete"
            android:layout_width="0dip"
            android:layout_weight="1"
            style="@style/button"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/timer_delete"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/timer_plus_one"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="0dip"
            android:layout_weight="1"
            style="@style/button"
            android:text="@string/timer_plus_one"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/timer_stop"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:text="@string/timer_stop"
            style="@style/button"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
